2009-04-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Cleaned up 'can_swap' and fixed handling of ImplicitIndex
	objects there.

2009-04-14  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added handling of Grassmann derivatives in @prodrule.

	* Added 'type=grassmann' to the Indices property.

	* Fixed a bug in the pattern matcher which would match 'a' to
	'b^a' under some rare circumstances.

2009-03-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made LaTeX errors pop up in a scrollable dialog.

	* Fixed a display bug leading to superfluous brackets for e.g. "cos(a+b)".

2009-03-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of brackets in @expand_powers.

	* Fixed segfault in @expand_powers.

2009-03-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug which would treat indices with Coordinate property
	as patterns.

2009-03-17  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added primitive interface to Maxima in the form of the @maxima
	command. 

2009-03-10  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed copyright notice.

	* Released 1.08

2009-02-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of (a+b)+(c+d) type expressions in
	@drop/@keep_weight in which c & d have different weight (leading
	to an undetermined weight for 'c+d').

2009-02-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made @canonicalorder and @acanonicalorder act on single-factor
	terms as well.

	* Made '%' to label comments when it occurs at the beginning of a
	line.

2009-01-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed another nested partial derivative bug, now in @pintegrate.

2009-01-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.07

	* Fixed a bug in @unwrap which would make it forget to cleanup
	nested partial derivatives.

2009-01-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.06

	* Removed leftover print_recursive_treeform debugging output.
